--- a/compose.yml
+++ b/compose.yml
@@ -63,8 +63,8 @@ services:
       - app
     volumes:
       - ./services/nginx.conf:/etc/nginx/nginx.conf
-      - ./certs/certificate.pem:/etc/ssl/certificate.pem
-      - ./certs/private.pem:/etc/ssl/private.pem
+      - ./certs/cert.pem:/etc/ssl/certificate.pem
+      - ./certs/key.pem:/etc/ssl/private.pem
 
 
 volumes:
