--- a/compose.yml
+++ b/compose.yml
@@ -4,13 +4,15 @@ services:
     image: redis:latest
     restart: always
     container_name: redis
-    ports:
-      - "6379:6379"
+    # ports:
+    #   - "6379:6379"
     healthcheck:
       test: ["CMD-SHELL", "redis-cli ping | grep PONG"]
       interval: 10s
       timeout: 10s
       retries: 5
+    networks:
+      - private
 
 
   mysql:
@@ -19,8 +21,8 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_DATABASE: mood_tracker
-    ports:
-      - "3307:3306"
+    # ports:
+    #   - "3307:3306"
     healthcheck:
       test: mysql --host=mysql --user="root" --password="${MYSQL_ROOT_PASSWORD}" --silent --execute "USE mood_tracker;"
       interval: 10s
@@ -28,6 +30,8 @@ services:
       retries: 10
     volumes:
       - mysql:/var/lib/mysql
+    networks:
+      - private
 
   app:
     container_name: app
@@ -48,8 +52,11 @@ services:
         condition: service_healthy
       mysql:
         condition: service_healthy
-    ports:
-      - "8000:8000"
+    # ports:
+    #   - "8000:8000"
+    networks:
+      - private
+      - public
 
 
   nginx:
@@ -65,7 +72,14 @@ services:
       - ./services/nginx.conf:/etc/nginx/nginx.conf
       - ./certs/cert.pem:/etc/ssl/certificate.pem
       - ./certs/key.pem:/etc/ssl/private.pem
+    networks:
+      - public
 
 
 volumes:
   mysql:
+
+networks:
+  public:
+  private:
+    driver: bridge
