Added mysql password to env variables app in production compose file

--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -41,6 +41,7 @@ services:
       GOOGLE_CLIENT_DOMAIN: ${GOOGLE_CLIENT_DOMAIN}
       REDIS_HOST: 'redis'
       STORAGE_URI: 'redis://redis:6379/0'
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       CONNECTION_STRING: ${CONNECTION_STRING_DOCKER}
       ENVIRONMENT: 'PRODUCTION'
     depends_on:
