--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -16,6 +16,7 @@ services:
   mysql:
     container_name: mysql
     image: mysql:8
+    restart: always
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_DATABASE: mood_tracker
